# pheo

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  TRADEMARK.md  llms.txt  openapi.json  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  publish-pypi.yml
docs/: README.md  agents.md  api.md  datamodel.md  deployment.md  getting-started.md  glossary.md  kernel-boundary.md  mcp.md  release.md  spec.md
examples/code_agent/: README.md  run_demo.py
examples/finance_exception/: README.md  ap-policy.md  observe_cases.py  run_preference_factory.py
examples/hello_world/: README.md  run_demo.py
examples/langchain_attach/: README.md  requirements.txt  run_demo.py
examples/traces/: langgraph-langsmith-run.json  noveum-trace.json  weave-call.json
legal/: KERNEL_LICENSE.md  README.md  build-contributor-agreement-pdf.py  pheo-contributor-agreement.md
patterns/: coding-agent-grow.md  import-traces.md  langchain-attach.md  mcp-agent-checklist.md  openai-compatible-endpoint.md  wrap-python-function.md
pheo/: __init__.py  api.py  cli.py  mcp.py  openapi.py  projects.py  sdk.py
pheo/connectors/: __init__.py
pheo/core/: __init__.py  candidates.py  corpus.py  decisions.py  endpoint.py  memory.py  notifications.py  text.py  traces.py  workflow.py
pheo/examples/: __init__.py
pheo/examples/code_agent/: README.md  __init__.py  run_demo.py
pheo/examples/finance_exception/: __init__.py  invoice_cases.jsonl
pheo/examples/hello_world/: __init__.py  run_demo.py
pheo/examples/langchain_attach/: __init__.py  run_demo.py
pheo/integrations/: __init__.py  langchain.py
pheo/kernels/: __init__.py  runtime.py
pheo/sinks/: __init__.py
pheo/storage/: __init__.py  models.py  sqlite.py
pheo/ui/: __init__.py
pheo_kernels/: __init__.py
scripts/: PLATFORM_HARNESS.md  platform_harness.py
tests/: test_pheo.py
