[metadata]
name = pheo
version = 0.1.3
description = Customer-controlled review memory for AI workflows
long_description = file: README.md
long_description_content_type = text/markdown
license_files =
    LICENSE
    COMMERCIAL_LICENSE.md
    legal/KERNEL_LICENSE.md

[options]
packages = find:
python_requires = >=3.13
include_package_data = true
zip_safe = false

[options.packages.find]
include =
    pheo*
    pheo_kernels*

[options.package_data]
pheo =
    examples/**/*.md
    examples/**/*.jsonl
pheo_kernels =
    *.pyc
    **/*.pyc
    _bundle/**

[options.extras_require]
langchain =
    langchain-core>=0.3,<0.4
dev =
    pytest>=8.0

[options.entry_points]
console_scripts =
    pheo = pheo.cli:entrypoint
